--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
+:root {
+    --primary-color:rgb(130, 87, 18);
+    --secondary-color:#fcfcfc;
+}
 body{
 font-family: 'Poppins', sans-serif;
 font-family: 'Tinos', serif;
 font-family: 'Bodoni Moda', serif;
 /* GRADIENT BG */
-background-image: linear-gradient(to right,rgb(131, 131, 131), rgb(193, 193, 193));
+background-image: linear-gradient(to right,rgb(131, 131, 131), rgb(226, 226, 226));
 font-size: 10px;
 }
 .header{
-    background-color: white;
+    background-color: #fcfcfc;
     width: 90%;
     height: 100px;
     margin: 0 auto;
@@ -51,7 +55,7 @@ font-size: 10px;
     display:inline;
     font-family: 'Tinos', serif;
     margin: 10px;
-    color: rgb(130, 87, 18);
+    color: var(--primary-color);
 }
 .header__nav ul li:hover{
     text-decoration-line: underline;
@@ -62,7 +66,7 @@ font-size: 10px;
     right: 50px;
     top: 32px;
     font-family: 'Tinos', serif;
-    color: rgb(130, 87, 18);
+    color: var(--primary-color);
 }
 .header__direct:hover {
     text-decoration-line: underline;
@@ -70,9 +74,14 @@ font-size: 10px;
 }
 /* CAROUSEL */
 .carousel{
-    background-color: white;
+    background-color: #fcfcfc;
+    background-image: url("./img/rose.png");
+    background-repeat: no-repeat;
+    background-attachment:local;
+    background-position: 400px -250px;
+    background-size: 1000px;
     width: 90%;
-    height: 600px;
+    height: 550px;
     margin: 0 auto;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -91,20 +100,20 @@ font-size: 10px;
 }
 .carousel__para{
     position:absolute;
-    width: 450px;
+    width: 480px;
     height: 400px;
     top: 0px;
     left: 20px;
     z-index: 1;
 }
 .carousel__para p{
-    opacity: 0.7;
-    font-size: 150px;
+    opacity: 0.8;
+    font-size: 160px;
     margin: 0 auto;
     line-height: 1;
     letter-spacing: -10px;
     /* GRADIENT FONT */
-    background: -webkit-linear-gradient(135deg, rgb(130, 87, 18), rgb(177, 177, 177));
+    background: -webkit-linear-gradient(135deg, var(--primary-color), var(--secondary-color));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -127,15 +136,17 @@ font-size: 10px;
 .carousel__item {
     opacity: 0.8;
     width: 230px;
-    height: 600px;
+    height: 450px;
     border-radius: 100px;
 }
 .carousel__item:hover {
     width: 260px;
-    height: 630px;
+    height: 450px;
+    border-radius: 100px;
     opacity: 1;
     transition: ease-in-out width 0.6s, opacity 0.3s;
     align-self: flex-start;
+    /* bg-gradient */
 }
 .carousel__item img{
     max-width: 100%;
@@ -147,12 +158,13 @@ font-size: 10px;
 }
 .carousel__item img:hover{
     -webkit-filter: grayscale(0%);
+    border-radius: 100px;
 }
 .pmid {
     font-size: 10px;
     text-align: center;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 7px;
     color:rgb(155, 155, 155);
 }
 .pbot{
